--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "scripts": {
     "dev": "parcel js/*.js styles/*.scss",
-    "build": "parcel build js/*.js styles/*.scss",
-    "build:prod": "parcel build js/*.js styles/*.scss --no-source-maps --no-cache",
+    "prod": "parcel build js/*.js styles/*.scss --no-source-maps --no-cache --experimental-compress",
     "compress": "parcel build js/*.js styles/*.scss --no-source-maps --no-cache --experimental-compress",
     "compress:prod": "parcel build js/*.js styles/*.scss --no-source-maps --no-cache --experimental-compress"
   },
