--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "scripts": {
     "dev": "parcel js/*.js styles/*.scss",
-    "prod": "parcel build js/*.js styles/*.scss --no-source-maps --no-cache --experimental-compress",
-    "compress": "parcel build js/*.js styles/*.scss --no-source-maps --no-cache --experimental-compress",
-    "compress:prod": "parcel build js/*.js styles/*.scss --no-source-maps --no-cache --experimental-compress"
+    "prod": "parcel build js/*.js styles/*.scss --no-source-maps --no-cache",
+    "compress": "parcel build js/*.js styles/*.scss --no-source-maps --no-cache --experimental-compress"
   },
   "keywords": [],
   "author": "",
